[gd_scene load_steps=11 format=2]

[ext_resource path="res://map/Default/campfire.png" type="Texture" id=1]
[ext_resource path="res://map/Site.gd" type="Script" id=2]
[ext_resource path="res://map/circle1.png" type="Texture" id=3]
[ext_resource path="res://map/circle3.png" type="Texture" id=4]
[ext_resource path="res://map/circle4.png" type="Texture" id=5]
[ext_resource path="res://map/circle2.png" type="Texture" id=6]
[ext_resource path="res://map/circle5.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.352941, 0.647059, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="site" type="Sprite"]
position = Vector2( 0.483734, -17.4315 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="select" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
frames = SubResource( 1 )

[node name="area" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
hint_tooltip = "Site"
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -88.0
margin_right = 8.0
margin_bottom = -65.0
texture = SubResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="label"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
[connection signal="gui_input" from="area" to="." method="_on_area_gui_input"]
[connection signal="mouse_entered" from="area" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_Label_mouse_exited"]
